Added Preferences Window and Readme. Adjusted accordingly.
Took 11 hours 42 minutes